feat(deploy): Router HA + 控制平面分离 + 测试覆盖
- docker-compose.ha.yml: Router×3 + Consumer×2 + Nginx 负载均衡
- deploy/nginx-router.conf / nginx-consumer.conf: 轮询+SSE+健康检查
- ControlPlaneEventBus: 独立 Redis key 前缀 + 可选独立连接
- DegradationService: 降级级别变更时通过控制平面发布事件
- 测试覆盖 (4文件, 23用例):
  - MultiQueryServiceTest (11 tests)
  - ParentChildDocumentChunkerTest (3 tests)
  - RetrievalTraceTest (6 tests)
  - BgeRerankerTest (3 tests, 修复旧测试 API 兼容)